--- a/AmbiMath.vcxproj
+++ b/AmbiMath.vcxproj
@@ -34,12 +34,14 @@
     <None Include="SECURITY.md" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="include\Spherical-Harmonics.cpp" />
     <ClCompile Include="src\AmbiMath.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\AmbiMath.h" />
     <ClInclude Include="include\chugin.h" />
     <ClInclude Include="include\SHcalc.h" />
+    <ClInclude Include="include\SHCT.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{32B00A7B-FFF6-2ABC-55E4-9C8F61E1BCEC}</ProjectGuid>
